# sports-hub-py

./: .gitignore  README.md  pyproject.toml
backend/: main.py  manager.py  pyproject.toml  requirements.txt  schema.py
backend/destktop_app/: main_window.py
backend/platform/: __init__.py  fb.py  im.py  saba.py
