[tool.poetry]
name = "sports-hub-py"
description = "一个全栈Python开发的桌面应用"
authors = ["王朋 <02587462@yto.com.cn>"]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
PySide6 = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"